# learn

AdventOfCode/: AdventOfCode.cabal
AdventOfCode/exe/: Main.hs
AdventOfCode/src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs
