name:                AdventOfCode
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dspmathguru/AdventOfCode#readme
license:             BSD3
license-file:        LICENSE
author:              Richard J Tobias
maintainer:          dspmathguru@gmail.com
copyright:           2017 Richard J Tobias
category:            Games
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Day1, Day2, Day3, Day4
  hs-source-dirs:      src
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , regex-base
                     , regex-tdfa
  default-language:    Haskell2010

executable AdventOfCode
  hs-source-dirs:      exe
  main-is:             Main.hs
  ghc-options:         -Wall -fwarn-tabs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , AdventOfCode
                     , parsec
